[package]
name = "cargo-mdparse"
version = "0.1.1-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Split out Rust code from Markdown"
documentation = "https://docs.rs/cargo-mdparse/"
repository    = "https://github.com/termoshtt/cargo-mdparse"
keywords      = ["cargo-subcommand"]
license       = "MIT"
readme        = "README.md"
categories    = []

[dependencies]
clap = "2.33.3"
pulldown-cmark = "0.8.0"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
